# imagestore

./: .env-sample  Dockerfile  Makefile  README.md  cmd.sh  docker-compose.yml  entrypoint.sh  main.py  pyproject.toml
contrib/minio/: Dockerfile  config.json  entrypoint.sh
contrib/mongo/: mongo-init.js
src/: config.py  datastore.py  dependency.py  endpoint.py  factory.py  repository.py  runserver.py  schema.py
src/endpoints/: image.py
templates/: index.jinja2
tests/: conftest.py  test_frames.py  test_upload.py
