[project]
name = "imagestore"
version = "0.0.1"
description = "An application to store and retrieve pixel data of an image"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.0",
    "loguru>=0.7.2",
    "matplotlib>=3.9.2",
    "minio>=7.2.9",
    "motor>=3.6.0",
    "numpy>=2.1.1",
    "polars>=1.8.2",
    "pydantic-settings>=2.5.2",
    "pydantic>=2.9.2",
    "scipy>=1.14.1",
    "uvicorn>=0.31.0",
]

[tool.uv]
dev-dependencies = [
    "ipython>=8.27.0",
    "pytest-asyncio>=0.24.0",
    "pytest>=8.3.3",
    "ruff>=0.6.8",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
